# mpDris2

./: .gitignore  .mailmap  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  mpDris2  mpDris2.conf  org.mpris.MediaPlayer2.mpd.service  shell.nix
po/: POTFILES.in  fr.po  nl.po
src/: Makefile.am  mpDris2  mpDris2-remote.service.in  mpDris2.conf  mpDris2.desktop  mpDris2.in  mpDris2.in.py  mpDris2.service.in  mpdris2.desktop  org.mpris.MediaPlayer2.mpd.service.in
